*SVN*

* Fixed issues with BLOB limits, charsets, and booleans for Firebird #5194, #5191, #5189 [kennethkunz@gmail.com]

* Fixed usage of :limit and with_scope when the association in scope is a 1:m #5208 [alex@purefiction.net]

* Fixed migration trouble with SQLite when NOT NULL is used in the new definition #5215 [greg@lapcominc.com]

* Fixed problems with eager loading and counting on SQL Server #5212 [kajism@yahoo.com]

* Fixed that count distinct should use the selected column even when using :include #5251 [anna@wota.jp]

* Fixed that :includes merged from with_scope won't cause the same association to be loaded more than once if repetition occurs in the clauses #5253 [alex@purefiction.net]

* Allow models to override to_xml.  #4989 [Blair Zajac <blair@orcaware.com>]

* PostgreSQL: don't ignore port when host is nil since it's often used to label the domain socket.  #5247 [shimbo@is.naist.jp]

* Records and arrays of records are bound as quoted ids. [Jeremy Kemper]
    Foo.find(:all, :conditions => ['bar_id IN (?)', bars])
    Foo.find(:first, :conditions => ['bar_id = ?', bar])

* Fixed that Base.find :all, :conditions => [ "id IN (?)", collection ] would fail if collection was empty [DHH]

* Add a list of regexes assert_queries skips in the ActiveRecord test suite.  [Rick]

* Fix the has_and_belongs_to_many #create doesn't populate the join for new records.  Closes #3692 [josh@hasmanythrough.com]

* Provide Association Extensions access to the instance that the association is being accessed from.  
  Closes #4433 [josh@hasmanythrough.com]

* Update OpenBase adaterp's maintainer's email address. Closes #5176. [Derrick Spell]

* Add a quick note about :select and eagerly included associations. [Rick]

* Add docs for the :as option in has_one associations.  Closes #5144 [cdcarter@gmail.com]

* Fixed that has_many collections shouldn't load the entire association to do build or create [DHH]
